--- a/localization/eng/AigisMod-Keyword-Strings.json
+++ b/localization/eng/AigisMod-Keyword-Strings.json
@@ -225,7 +225,7 @@
       "Magical_ignition",
       "magical_ignition"
     ],
-    "DESCRIPTION": "At the start of the combat, add #yRawal #yShield and #yRawal #ySpear to the Draw Pile."
+    "DESCRIPTION": "At the start of the combat, add #yShield #yof #yRawal and #ySpear #yof #yRawal to the Draw Pile. These have the same amount of upgrades as this card."
   }
 
 ]
