--- a/localization/eng/AigisMod-Relic-Strings.json
+++ b/localization/eng/AigisMod-Relic-Strings.json
@@ -324,7 +324,7 @@
     ]
   },
   "aigisMod:UndeadWorld": {
-    "NAME": "Undead World",
+    "NAME": "Last Death Energy",
     "FLAVOR": "Metus: Human bodies sure are inconvenient. I suppose this is what it means to be alive.",
     "DESCRIPTIONS": [
       "Start each combat with #b3 Skeleton Unit and #b1 Metus in Exhaust Pile. ",
