schinese localization revision
Updating schinese localization files. steamID:kiver

--- a/localization/zhs/AigisMod-Character-Strings.json
+++ b/localization/zhs/AigisMod-Character-Strings.json
@@ -1,13 +1,13 @@
 {
   "aigisMod:ThePrinceCharacter": {
     "NAMES": [
-      "公主",
-      "公主"
+      "王子",
+      "王子"
     ],
     "TEXT": [
-      "在英雄之塔训练时，异象发生. NL 公主和她的侍从们将探求尖塔的秘密.",
-      "以公主的名义下令，进攻心脏！.",
-      "在灯光昏暗的街道上巡视，你遇到几个戴着兜帽的人，他们正在进行某种黑暗的仪式. 当你靠近他们时，它们怪异地向你转过身来. 其中最高的一个露出尖牙，向你伸出一只长长的苍白的手. NL ~\"加入~ ~我们.~ ~可爱的~ ~公主,~ ~一起~ ~感受~ ~尖塔~ ~生命~ ~的~ ~温度~ ~吧.\"~"
+      "王子在英杰塔演习时被卷入了异象之中。 NL 现在王子和他的部下们在探索一处名为高塔的地方。",
+      "你下令你的单位攻击心脏。",
+      "在一条昏暗的街上，你遇见几个戴着兜帽的人在进行某种黑暗的仪式。当你靠近时，他们全都同时转身面对你，让你觉得十分诡异。 其中个子最高的一个微微一笑，露出了长长的尖牙，向你伸出了一只苍白而瘦长的手： NL ~\"加入~ ~我们~ ~殿下。~ ~一起~ ~感受~ ~高塔~ ~的~ ~温暖~ ~吧。\"~"
     ]
   },
   "aigisMod:TheEmperorCharacter": {
@@ -16,9 +16,9 @@
       "皇帝"
     ],
     "TEXT": [
-      "白帝率领着亲信来调查尖塔 NL 有股神秘的能量蕴藏在尖塔之巅.",
-      "你和属下们对心脏发起总攻.",
-      "在灯光昏暗的街道上巡视，你遇到几个戴着兜帽的人，他们正在进行某种黑暗的仪式. 当你靠近他们时，它们怪异地向你转过身来. 其中最高的一个露出尖牙，向你伸出一只长长的苍白的手. NL ~\"加入~ ~我们.~ ~战士,~ ~一起~ ~感受~ ~尖塔~ ~生命~ ~的~ ~温度~ ~吧.\"~"
+      "白之皇帝率领一支探索队 NL 探索隐藏在高塔中的神秘力量。",
+      "你与战友们一同攻击心脏。",
+      "在一条昏暗的街上，你遇见几个戴着兜帽的人在进行某种黑暗的仪式。当你靠近时，他们全都同时转身面对你，让你觉得十分诡异。 其中个子最高的一个微微一笑，露出了长长的尖牙，向你伸出了一只苍白而瘦长的手： NL ~\"加入~ ~我们~ ~战士。~ ~一起~ ~感受~ ~高塔~ ~的~ ~温暖~ ~吧。\"~"
     ]
   },
   "aigisMod:TheAvengerCharacter": {
@@ -27,9 +27,9 @@
       "复仇者"
     ],
     "TEXT": [
-      "文森特 为弥补家族犯下的罪过而环游世界寻找契机，但没能如愿. NL 现在他寻求尖塔的力量, 但他不是孤身一人.",
-      "你为心脏准备了决胜之牌.",
-      "在灯光昏暗的街道上巡视，你遇到几个戴着兜帽的人，他们正在进行某种黑暗的仪式. 当你靠近他们时，它们怪异地向你转过身来. 其中最高的一个露出尖牙，向你伸出一只长长的苍白的手. NL ~\"加入~ ~我们.~ ~猎人,~ ~一起~ ~感受~ ~尖塔~ ~生命~ ~的~ ~温度~ ~吧.\"~"
+      "文森特没能救下自己的家人，为了赎罪而开始了自己的旅程。 NL 现在他将会探索高塔，但并非孤身一人。",
+      "你准备好了最后一张王牌对抗心脏",
+      "在一条昏暗的街上，你遇见几个戴着兜帽的人在进行某种黑暗的仪式。当你靠近时，他们全都同时转身面对你，让你觉得十分诡异。 其中个子最高的一个微微一笑，露出了长长的尖牙，向你伸出了一只苍白而瘦长的手： NL ~\"加入~ ~我们~ ~猎人。~ ~一起~ ~感受~ ~高塔~ ~的~ ~温暖~ ~吧。\"~"
     ]
   }
 }
