--- a/localization/zhs/AigisMod-Event-Strings.json
+++ b/localization/zhs/AigisMod-Event-Strings.json
@@ -1,19 +1,19 @@
 {
   "aigisMod:TowerOfHeroes": {
-    "NAME": "英雄之花",
+    "NAME": "英杰塔",
     "DESCRIPTIONS": [
-      "这一层似乎还在英雄之塔内部. NL 塔的守护者们让你做出选择: NL 他们将力量的一部分借给你 NL 或者 NL 你可以挑战一个更强大的存在.",
-      "你相信自己的选择，权衡利弊之后, 继续踏上冒险旅途.",
-      "庞大的力量将为你所用.",
-      "你超出了他们的预期."
+       "你到达了依稀可以辨认为英杰塔的一层。 NL 看守着塔的英杰们给了你一个选择： NL 他们可以借给你一部分力量 NL 或者 NL 考验你的决心，为寻求更强的力量而战斗。",
+      "你对你的决定很满意, 你离开了本层并继续你的冒险。",
+      "你的麾下将会拥有强大的助力",
+      "你远超他们的期望。"
     ],
     "OPTIONS": [
-      "[招募] #g获得 #g一张 #g罕见 #g英雄 #g牌.",
-      "[战斗] #g升级 #g一张 #g罕见 #g英雄 #g牌 #g为 #g稀有.",
+      "[招募] #g获得一张罕见英杰卡牌 。",
+      "[战斗] #g将一张罕见英杰卡牌升级至稀有 。",
       "[离开]",
-      "选择一张英雄牌加入到卡组.",
-      "[招募] #g获得 #g一张 #g稀有 #g英雄 #g牌.",
-      "[锁定]你没有可升级到稀有等级的英雄牌."
+      "选择一张英杰卡牌添加到你的牌组中。",
+      "[招募] #g获得一张稀有英杰卡牌 。",
+      "[未解锁] 你没有可以升级至稀有的英杰卡牌。"
     ]
   }
 }
