--- a/localization/zhs/AigisMod-Monster-Strings.json
+++ b/localization/zhs/AigisMod-Monster-Strings.json
@@ -1,46 +1,46 @@
 {
   "aigisMod:BattleTank": {
-    "NAME": "强袭坦克",
+    "NAME": "战斗坦克",
     "MOVES": [
-      "溅射攻击.",
-      "穿刺攻击.",
-      "回合结束时, 对任意敌人造成 #b", " 点 刀光剑影 伤害 .",
-      "回合结束时, 对任意敌人造成 #b", " 点 直击灵魂 伤害."
+      "扩散弹攻击。",
+      "贯穿弹攻击。",
+      "回合结束时，对随机一名敌人造成 #b", " 点溅射伤害。",
+      "回合结束时，对随机一名敌人造成 #b", " 点真实伤害。"
     ]
   },
   "aigisMod:EnergyAthanor": {
-    "NAME": "能源熔炉",
+    "NAME": "活力炼金炉",
     "MOVES": [
-      "产生能量.",
-      "回合开始, 获得 #b", " 点 [E] ."
+      "活力圣灵药。",
+      "回合开始时获得 #b", "  [E] ."
     ]
   },
   "aigisMod:Solais": {
     "NAME": "索拉斯",
     "MOVES": [
       "充能",
-      "永恒之星"
+      "星天召唤之仪·永恒星尘"
     ],
     "DIALOG": [
-      "闪耀之星降临"
+      "闪烁的群星即将坠落"
     ]
   },
   "aigisMod:Sanara": {
-    "NAME": "萨那拉",
+    "NAME": "莎娜拉",
     "MOVES": [
-      "Geotoken",
-      "远古石碑",
-      "风水大师"
+      "地脉",
+      "阿劳纳斯巨岩",
+      "地卜大师"
     ],
     "DIALOG": [
       ""
     ]
   },
   "aigisMod:Yuugen": {
-    "NAME": "幽幻",
+    "NAME": "尤金",
     "MOVES": [
-      "碎裂弹头",
-      "苦痛弹头"
+      "碎牙矢",
+      "剧痛矢"
     ],
     "DIALOG": [
       ""
@@ -49,9 +49,9 @@
   "aigisMod:Alva": {
     "NAME": "阿尔瓦",
     "MOVES": [
-      "Cruadin 之影",
-      "七重圆环",
-      "圣神之剑—— Gea Curruid"
+      "光之剑复制品",
+      "七要塞",
+      "神剑Gea Curruid"
     ],
     "DIALOG": [
       ""
@@ -60,42 +60,42 @@
   "aigisMod:Tuan": {
     "NAME": "图安",
     "MOVES": [
-      "冲破桎梏",
-      "不顾一切的决意"
+      "极为迅疾的蹂躏咆哮",
+      "蛮勇不落的粉碎者"
     ],
     "DIALOG": [
       ""
     ]
   },
   "aigisMod:Tram": {
-    "NAME": "图姆",
+    "NAME": "托拉姆",
     "MOVES": [
-      "Mac an Luin",
-      "圣银权能",
+      "枪之子",
+      "银之威光",
       "",
-      "光辉大剑"
+      "崭新的辉之剑"
     ],
     "DIALOG": [
-      "闪光之银"
+      "银之一闪"
     ]
   },
   "aigisMod:Ambrose": {
-    "NAME": "安布萝斯",
+    "NAME": "安布落兹",
     "MOVES": [
-      "花之魔法",
-      "魔幻花园",
-      "Aval Garden"
+      "开花魔法",
+      "魔法花园",
+      "山野花园"
     ],
     "DIALOG": [
       ""
     ]
   },
   "aigisMod:Arge": {
-    "NAME": "阿尔盖",
+    "NAME": "阿杰",
     "MOVES": [
-      "构筑铁壁--进攻",
-      "魔法无人机--防御",
-      "机械师米娅可--攻击"
+      "扩散打击要塞赛密亚斯",
+      "防卫魔动骑",
+      "扩散打击机构米赫"
     ],
     "DIALOG": [
       ""
