--- a/localization/jpn/AigisMod-Monster-Strings.json
+++ b/localization/jpn/AigisMod-Monster-Strings.json
@@ -28,9 +28,9 @@
   "aigisMod:Sanara": {
     "NAME": "サナラ",
     "MOVES": [
-      "ジオトークン",
+      "ジオ・レイライン",
       "メガリス",
-      "マスタージオマンサー"
+      "マスタージオマンシー"
     ],
     "DIALOG": [
       ""
