--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -114,9 +114,9 @@
     "FLAVOR": "「 (尖)塔の階層を制したご褒美に、「英傑結晶」をあげちゃいます」-ソラス",
     "DESCRIPTIONS": [
       "戦闘勝利時に、 #b1 ポイント獲得する。 ",
-      "マップ画面（戦闘/イベント/キャンプ以外）で、 このレリックを #y右クリック すると #b200 #yゴールド と #b5 ポイント消費して #yアンコモン #y英傑 カード #b1 枚を選んでデッキに加える。すでの所持している同名カード(レア含む)は代わりにアップグレードする。",
+      "マップ画面（戦闘/イベント/キャンプ以外）で、 #b200 #Yゴールド と #b5 ポイントを持っている場合、このレリックを #y右クリック する と #yアンコモン #y英傑 カード #b1 枚を選んで加える。 すでの所持している同名カード(レア含む)は代わりにアップグレードする。",
       "使うことができない…",
-      "デッキに加えるカードを選択"
+      "200ゴールドと5ポイントを消費してでデッキに加えるカードを選択。"
     ]
   },
   "aigisMod:DescendantHero": {
@@ -231,7 +231,7 @@
     "NAME": "マグヌムオプス",
     "FLAVOR": "「こう見えて白の帝国の公認の錬金術士なのよ？」-ヘルミーネ",
     "DESCRIPTIONS": [
-      "獲得時、ポーションスロットを #b1 得る。 #yポーションを使用した時、戦闘終了まで、手札の  #yコモン と #yアンコモン カードを全て #yアップグレード する。 "
+      "獲得時、ポーションスロットを #b1 得る。 #yポーション を使用した時、戦闘終了まで、手札の  #yコモン と #yアンコモン カードを全て #yアップグレード する。 "
     ]
   },
 
@@ -271,7 +271,7 @@
     "NAME": "天狗の火焔",
     "FLAVOR": "「理想の果てを見せてくれよ。それまで、力を貸してやるからよ。」-グレン",
     "DESCRIPTIONS": [
-      "1戦闘に1回、このレリックを #y右クリック することで手札 #b1 枚 を #y廃棄 できる。 そのカードが #y呪い か #y状態異常の時、カードを #b1 枚ドローしてすべての敵に #b3 #yバーン を与える。"
+      "1戦闘に1回、このレリックを #y右クリック することで手札 #b1 枚 を #y廃棄 できる。 そのカードが #y呪い か #y状態異常 の時、カードを #b1 枚ドローしてすべての敵に #b3 #yバーン を与える。"
     ]
   },
   "aigisMod:CatDisturbance": {
