--- a/localization/jpn/AigisMod-UI-Strings.json
+++ b/localization/jpn/AigisMod-UI-Strings.json
@@ -263,5 +263,11 @@
       "手札に加えるアンデット1枚を選択する", 
       "廃棄山にアンデッドカードかない…"
     ]
+  },
+
+  "HeroCrystalText": {
+    "TEXT": [
+      "英傑カードを見る。"
+    ]
   }
 }
